# PaperTrade

./: .env.example  .env.example.proxmox  .env.production.example  .env.production.template  .env.proxmox  .env.proxmox.example  .git-commit-msg  .gitignore  .gitleaks.toml  .mcp.json  .pr-description.md  .pre-commit-config.yaml  .tmp_pr_comment.md  .tmp_start_agent.sh  AGENT_ORCHESTRATION.md  AGENT_ORCHESTRATION_OLD.md  BACKLOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  CONSOLIDATION_NOTES.md  CONSOLIDATION_PLAN.md  CONTRIBUTING.md  DOCUMENTATION.md  FEATURE_TRADE_MARKERS.md  FUTURE_IDEAS.md  IMPLEMENTATION_SUMMARY_TASK_178.md  PROGRESS.md  PROTOTYPE_GUIDE.md  README.md  README.md.backup  RENAME_FOLLOWUP_TASKS.md  RENAME_SUMMARY.md  REORGANIZATION_COMPLETE.md  Taskfile.yml  analysis_price_caching_architecture.md  docker-compose.ci.yml  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml  (+4 more)
backend/: .dockerignore  =1.13.0  Dockerfile  Dockerfile.dev  README.md  alembic.ini  config.example.toml  papertrade.db  pyproject.toml
backend/docs/: SCHEDULER.md
backend/migrations/: env.py
backend/migrations/versions/: 2b68a9f708ed_create_users_table.py  7ca1e9126eba_add_ticker_watchlist_table.py  a6a5412b5d02_add_holdings_breakdown_to_portfolio_.py  a7117ef792cb_add_strategy_activations.py  b001add_portfolio_type.py  b002add_strategy_and_backtest.py  c001_add_api_keys_table.py  c001add_exploration_tasks.py  c002_add_api_keys_table.py  c9b7d8e0f1a2_create_core_portfolio_tables.py  d26cec7cdf69_add_foreign_keys_and_pool_config.py  e46ccf3fcc35_add_price_history_table.py  f001_trigger_entities.py  f005_trigger_id_on_txns.py  h001_add_api_key_id_audit.py  j001_job_executions.py  j002_backfill_tasks.py  j003_trigger_mode.py  j004_audit_field_cleanup.py  l001_backtest_agent_invocations.py  l002_price_history_updated_at.py
backend/scripts/: backfill_prices.py  seed_db.py  seed_historical_data.py  verify_historical_data.py
backend/src/papertrade/: __init__.py  main.py
backend/src/papertrade/adapters/auth/: clerk_adapter.py  in_memory_adapter.py
backend/src/papertrade/application/commands/: __init__.py  buy_stock.py  create_portfolio.py  delete_portfolio.py  deposit_cash.py  login_user.py  refresh_token.py  register_user.py  sell_stock.py  withdraw_cash.py
backend/src/papertrade/application/dtos/: __init__.py  holding_dto.py  portfolio_dto.py  price_point.py  transaction_dto.py
backend/src/papertrade/application/ports/: __init__.py  auth_port.py  in_memory_portfolio_repository.py  in_memory_snapshot_repository.py  in_memory_transaction_repository.py  in_memory_user_repository.py  market_data_port.py  user_repository.py  (+3 more)
backend/src/papertrade/domain/: __init__.py  exceptions.py
backend/src/papertrade/infrastructure/: database.py  rate_limiter.py  scheduler.py  settings.py
backend/src/zebu/: __init__.py  main.py
backend/src/zebu/adapters/: __init__.py
backend/src/zebu/application/: exceptions.py
backend/src/zebu/domain/: exceptions.py
backend/src/zebu/infrastructure/: __init__.py  database.py  inbound_rate_limiter.py  job_audit.py  logging.py  market_calendar.py  rate_limiter.py  scheduler.py
backend/tests/: __init__.py  conftest.py
backend/tests/cassettes/test_alpha_vantage_adapter/: test_get_current_price_aapl.yaml  test_get_current_price_invalid_ticker.yaml  test_get_current_price_tsla.yaml
backend/tests/integration/: _helpers.py  conftest.py  test_activation_prewarm.py  test_activation_route_prewarm_wiring.py  test_activity_api.py  test_actor_logging.py  test_admin_data_coverage_api.py  test_admin_jobs_health_api.py  test_admin_watchlist_api.py  test_analytics_api.py  test_api.py  test_api_keys_api.py  test_auth_scheme_parameterization.py  test_backtest_agent_invocation_mode_api.py  test_backtest_agent_invocation_repository.py  test_backtest_agent_invocations_list_api.py  test_backtest_rate_limit.py  test_backtest_strategies.py  test_backtests_lazy_backfill.py  test_debug_api.py  test_error_handling.py  test_exploration_tasks_api.py  test_f6_trigger_id_wireup.py  test_mcp_smoke_flows.py  test_migration_l001_backtest_agent_invocations.py  test_pagination_and_errors.py  test_portfolio_api.py  test_portfolio_cap_adapter.py  test_price_history_caching.py  test_prices_api.py  test_seed_script.py  test_strategy_activations_api.py  test_strategy_condition_trigger_repository.py  test_task_221_data_coverage_ops.py  test_transaction_api.py  test_transaction_trigger_id_audit.py  test_trigger_evaluation_dispatch.py  test_trigger_evaluation_service.py  test_triggers_api.py
backend/tests/integration/adapters/: test_alpha_vantage_adapter.py  test_sqlmodel_backfill_task_repository.py  test_sqlmodel_exploration_task_repository.py  test_sqlmodel_job_execution_repository.py  test_sqlmodel_portfolio_repository.py  test_sqlmodel_snapshot_repository.py  test_sqlmodel_strategy_activation_repository.py  test_sqlmodel_transaction_repository.py
backend/tests/integration/repositories/: test_price_repository.py  test_watchlist_manager.py
backend/tests/unit/adapters/: __init__.py
backend/tests/unit/application/: test_exceptions.py  test_in_memory_exploration_task_repository.py
backend/tests/unit/domain/: test_backtest_safety_violation_error.py  test_enhanced_exceptions.py  test_exceptions.py
backend/tests/unit/infrastructure/: test_database.py  test_inbound_rate_limiter.py  test_job_audit.py  test_market_calendar.py  test_rate_limiter.py  test_scheduler.py
backend/tests/unit/scripts/: test_trigger_smoke_test.py
mcp/: README.md  pyproject.toml
mcp/src/zebu_mcp/: __init__.py  __main__.py  _version.py  client.py  config.py  schemas.py  server.py
mcp/src/zebu_mcp/tools/: __init__.py  _registry.py  activations.py  backtests.py  exploration.py  portfolios.py  prices.py  strategies.py  tickers.py
mcp/tests/: conftest.py  test_client.py  test_config.py  test_smoke.py
mcp/tests/test_tools/: __init__.py  conftest.py  test_activations.py  test_backtests.py  test_exploration.py  test_portfolios.py  test_prices.py  test_strategies.py  test_tickers.py
(+1437 files in other folders)
