[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "papertrade"
version = "0.1.0"
description = "Stock market emulation platform for practicing trading strategies"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.6.0",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "alembic>=1.13.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "pyright>=1.1.389",
    "pytest-recording>=0.13.0",
    "fakeredis[lua]>=2.24.0",
    "respx>=0.22.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/papertrade"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["papertrade"]

[tool.pyright]
include = ["src"]
exclude = [
    "**/__pycache__",
    "**/node_modules",
    ".venv",
]
typeCheckingMode = "strict"
pythonVersion = "3.12"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "playwright>=1.57.0",
    "requests>=2.32.5",
]
