[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zebu"
dynamic = ["version"]
description = "Stock market emulation platform for practicing trading strategies"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.6.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "greenlet>=3.0.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "alembic>=1.13.0",
    "apscheduler>=3.10.0",
    "clerk-backend-api>=5.0.6",
    "structlog>=24.1.0",
    "python-json-logger>=2.0.7",
    "anthropic>=0.40.0,<1.0.0",
    # Transitive dependency CVE pins (deps.P0-2 / Wave 1-B)
    # Remove these once parent packages bump their floors past the fixed versions.
    "urllib3>=2.6.3",       # CVE-2026-21441 / GHSA-38jv-5279-wg99 (transitive via requests)
    "pyjwt>=2.12.0",        # CVE-2026-32597 / GHSA-752w-5fwx-jx9f (transitive via clerk-backend-api)
    "cryptography>=46.0.7", # CVE-2026-26007 / GHSA-r6ph-v2qm-q3c2 + 2 more (transitive via clerk-backend-api)
    "mako>=1.3.12",         # CVE-2026-44307 / GHSA-2h4p-vjrc-8xpq (transitive via alembic)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "pyright>=1.1.389",
    "pytest-recording>=0.13.0",
    "fakeredis[lua]>=2.24.0",
    "respx>=0.22.0",
]

[tool.hatch.version]
source = "code"
path = "src/zebu/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/zebu"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["zebu"]

[tool.pyright]
include = ["src"]
exclude = [
    "**/__pycache__",
    "**/node_modules",
    ".venv",
]
typeCheckingMode = "strict"
pythonVersion = "3.12"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "playwright>=1.57.0",
    "requests>=2.32.5",
]
